--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ header {
   height: get-vw(64px);
   padding: 0 24px 0 20px;
   box-sizing: border-box;
-  background-color: #fff;
+  //background-color: #fff;
   transition: background-color 0.3s;
   z-index: 9;
   .head {
@@ -219,6 +219,7 @@ header {
 @media all and (min-width: 961px){
   header {
     height: 92px;
+    padding: 0 60px;
     &.top {
       .head {
         .quick-menu {
