--- a/css/style.css
+++ b/css/style.css
@@ -2979,7 +2979,6 @@ header {
   height: 17.7777777778vw;
   padding: 0 24px 0 20px;
   box-sizing: border-box;
-  background-color: #fff;
   transition: background-color 0.3s;
   z-index: 9;
 }
@@ -3137,6 +3136,7 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
 @media all and (min-width: 961px) {
   header {
     height: 92px;
+    padding: 0 60px;
   }
   header.top .head .quick-menu {
     display: block;
