--- a/css/main.scss
+++ b/css/main.scss
@@ -18,9 +18,26 @@ header {
   height: get-vw(64px);
   padding: 0 24px 0 20px;
   box-sizing: border-box;
-  //background-color: #fff;
+  background-color: #fff;
   transition: background-color 0.3s;
   z-index: 9;
+  &.main {
+    background-color: transparent;
+    .head {
+      h1 {
+        a {
+          img {
+            &:nth-child(1) {
+              display: block;
+            }
+            &:nth-child(2) {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
   .head {
     display: flex;
     align-items: center;
@@ -91,11 +108,11 @@ header {
       h1 {
         a {
           img:nth-child(1) {
-            display: block !important;
+            display: block;
           }
 
           img:nth-child(2) {
-            display: none !important;
+            display: none;
           }
         }
       }
@@ -220,6 +237,7 @@ header {
   header {
     height: 92px;
     padding: 0 60px;
+    background-color: transparent;
     &.top {
       .head {
         .quick-menu {
