--- a/css/main.scss
+++ b/css/main.scss
@@ -169,7 +169,7 @@ header {
                 margin-bottom: get-vw(20px);
                 padding-bottom: get-vw(20px);
                 border-bottom: 1px solid #E8E8E8;
-                &:last-child {
+                &:not([style*="display: none"]):last-child {
                   margin-bottom: 0;
                   padding-bottom: 0;
                   border-bottom: 0;
@@ -306,9 +306,6 @@ header {
               font-size: 17px;
               font-weight: 700;
               color: #454545;
-              &:hover {
-                color: #00498C;
-              }
             }
             &:last-child {
               margin-right: 0;
@@ -408,7 +405,7 @@ header {
         background-color: #00498C;
         > ul {
           width: 100%;
-          height: 100%;
+          height: 100%!important;
           > li {
             display: none;
             width: 100%;
@@ -492,6 +489,7 @@ header {
           ul {
             li:nth-child(1) {
               a {
+                color: #00498C;
                 &:after {
                   display: block;
                 }
@@ -512,6 +510,7 @@ header {
           ul {
             li:nth-child(2) {
               a {
+                color: #00498C;
                 &:after {
                   display: block;
                 }
@@ -532,6 +531,7 @@ header {
           ul {
             li:nth-child(3) {
               a {
+                color: #00498C;
                 &:after {
                   display: block;
                 }
@@ -552,6 +552,7 @@ header {
           ul {
             li:nth-child(4) {
               a {
+                color: #00498C;
                 &:after {
                   display: block;
                 }
@@ -702,7 +703,7 @@ header {
                     &.active {
                       a {
                         color: #08A2DC!important;
-                        text-decoration: underline;
+                        //text-decoration: underline;
                       }
                     }
                     &:first-child {
