--- a/css/style.css
+++ b/css/style.css
@@ -3108,7 +3108,7 @@ header.expand nav > ul > li > ul > li > ul {
   padding-bottom: 5.5555555556vw;
   border-bottom: 1px solid #E8E8E8;
 }
-header.expand nav > ul > li > ul > li > ul:last-child {
+header.expand nav > ul > li > ul > li > ul:not([style*="display: none"]):last-child {
   margin-bottom: 0;
   padding-bottom: 0;
   border-bottom: 0;
@@ -3191,9 +3191,6 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     font-weight: 700;
     color: #454545;
   }
-  header .head .quick-menu ul li a:hover {
-    color: #00498C;
-  }
   header .head .quick-menu ul li:last-child {
     margin-right: 0;
   }
@@ -3264,7 +3261,7 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   }
   header.show-menu nav > ul {
     width: 100%;
-    height: 100%;
+    height: 100% !important;
   }
   header.show-menu nav > ul > li {
     display: none;
@@ -3336,11 +3333,17 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     color: #fff;
     opacity: 0.7;
   }
+  header.show-menu.menu0 .quick-menu ul li:nth-child(1) a {
+    color: #00498C;
+  }
   header.show-menu.menu0 .quick-menu ul li:nth-child(1) a:after {
     display: block;
   }
   header.show-menu.menu0 nav > ul > li:nth-child(1) {
     display: flex;
+  }
+  header.show-menu.menu1 .quick-menu ul li:nth-child(2) a {
+    color: #00498C;
   }
   header.show-menu.menu1 .quick-menu ul li:nth-child(2) a:after {
     display: block;
@@ -3348,11 +3351,17 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   header.show-menu.menu1 nav > ul > li:nth-child(2) {
     display: flex;
   }
+  header.show-menu.menu2 .quick-menu ul li:nth-child(3) a {
+    color: #00498C;
+  }
   header.show-menu.menu2 .quick-menu ul li:nth-child(3) a:after {
     display: block;
   }
   header.show-menu.menu2 nav > ul > li:nth-child(3) {
     display: flex;
+  }
+  header.show-menu.menu3 .quick-menu ul li:nth-child(4) a {
+    color: #00498C;
   }
   header.show-menu.menu3 .quick-menu ul li:nth-child(4) a:after {
     display: block;
@@ -3483,7 +3492,6 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   }
   header.expand nav > ul > li > ul > li > ul > li.active a {
     color: #08A2DC !important;
-    text-decoration: underline;
   }
   header.expand nav > ul > li > ul > li > ul > li:first-child a {
     font-size: 17px;
