--- a/css/style.css
+++ b/css/style.css
@@ -3078,6 +3078,18 @@ header.expand nav > ul > li {
   background: url(/images/ico_nav_menu_arrow_blue.png) no-repeat right 9.7222222222vw;
   background-size: auto 4.4444444444vw;
   border-bottom: 1px solid #E8E8E8;
+  /* Todo 2nd remove */
+  /* //Todo 2nd remove */
+}
+header.expand nav > ul > li:nth-child(2) > ul > li > ul:nth-child(3) {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-bottom: 0;
+}
+header.expand nav > ul > li:nth-child(3) > ul > li > ul:nth-child(1) {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-bottom: 0;
 }
 header.expand nav > ul > li h3 a {
   display: flex;
@@ -3108,7 +3120,7 @@ header.expand nav > ul > li > ul > li > ul {
   padding-bottom: 5.5555555556vw;
   border-bottom: 1px solid #E8E8E8;
 }
-header.expand nav > ul > li > ul > li > ul:not([style*="display: none"]):last-child {
+header.expand nav > ul > li > ul > li > ul:last-child {
   margin-bottom: 0;
   padding-bottom: 0;
   border-bottom: 0;
