--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,9 @@ caption {
 .topArea .visual .top-tab.on {
   height: auto;
 }
+.topArea .visual .top-tab.on ul li.active {
+  display: none;
+}
 .topArea .visual .top-tab.on ul li.active a {
   color: #8CE0FF;
 }
@@ -484,6 +487,7 @@ caption {
   }
   .topArea .visual .top-tab ul li.active {
     position: relative;
+    display: block;
   }
   .topArea .visual .top-tab ul li.active a {
     font-weight: 700;
@@ -2217,7 +2221,7 @@ caption {
     display: block;
     font-size: 16px;
   }
-  .contact-ir .ir-phone li .number {
+  .contact-ir .ir-phone li .number a {
     display: block;
     margin-top: 48px;
     font-size: 33px;
@@ -3314,11 +3318,17 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   header.show-menu nav > ul > li > ul > li > ul > li a {
     position: relative;
   }
-  header.show-menu nav > ul > li > ul > li > ul > li.active a, header.show-menu nav > ul > li > ul > li > ul > li:hover a {
+  header.show-menu nav > ul > li > ul > li > ul > li.active a {
     color: #8CE0FF !important;
+    text-decoration: none;
     opacity: 1;
   }
-  header.show-menu nav > ul > li > ul > li > ul > li.active a::before, header.show-menu nav > ul > li > ul > li > ul > li:hover a::before {
+  header.show-menu nav > ul > li > ul > li > ul > li:hover a {
+    color: #8CE0FF !important;
+    text-decoration: none;
+    opacity: 1;
+  }
+  header.show-menu nav > ul > li > ul > li > ul > li:hover a::before {
     content: "";
     display: block;
     position: absolute;
@@ -3329,7 +3339,7 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     background: #8CE0FF;
   }
   header.show-menu nav > ul > li > ul > li > ul > li:first-child.active a, header.show-menu nav > ul > li > ul > li > ul > li:first-child:hover a {
-    color: #fff !important;
+    color: #fff;
   }
   header.show-menu nav > ul > li > ul > li > ul > li:first-child.active a::before, header.show-menu nav > ul > li > ul > li > ul > li:first-child:hover a::before {
     background: #FFFFFF;
@@ -3523,7 +3533,7 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   }
   header.expand nav > ul > li.active > ul > li > ul > li.active a {
     color: #08A2DC;
-    text-decoration: underline;
+    text-decoration: none;
   }
 }
 main h2 {
