--- a/css/main.scss
+++ b/css/main.scss
@@ -537,6 +537,8 @@ header {
           > ul {
             > li:nth-child(1) {
               display: flex;
+              width: 820px;
+              margin: 0 auto;
             }
           }
         }
@@ -558,6 +560,8 @@ header {
           > ul {
             > li:nth-child(2) {
               display: flex;
+              width: 500px;
+              margin: 0 auto;
             }
           }
         }
@@ -600,6 +604,8 @@ header {
           > ul {
             > li:nth-child(4) {
               display: flex;
+              width: 820px;
+              margin: 0 auto;
             }
           }
         }
