--- a/css/main.scss
+++ b/css/main.scss
@@ -825,6 +825,7 @@ main {
       video {
         z-index: -1;
         width: 100vw;
+        height: 100vh;
         //position: absolute;
       }
     }
