--- a/css/ui.scss
+++ b/css/ui.scss
@@ -1474,8 +1474,9 @@
       position: absolute;
       top:auto;
       bottom:0;
-      left:0;
-      right:0;
+      left:50%;
+      transform: translateX(-50%);
+      right:auto;
       width:1920px;
       height:448px;
       background: url("/images/bg_vision_pc.png") no-repeat 50% 50%;
