--- a/css/ui.scss
+++ b/css/ui.scss
@@ -717,6 +717,7 @@
   .bbs_detail{
     margin-top:40px;
     .top{
+      margin-top:15px;
       .info{
         display:flex;
         div + div{
@@ -730,6 +731,9 @@
     .bbs-view-content{
       padding:60px 0 60px;
       font-size:18px;
+      & img{
+        text-align: center;
+      }
     }
   }
   .bbs-more{
