--- a/css/ui.scss
+++ b/css/ui.scss
@@ -639,6 +639,10 @@
     display:flex;
     justify-content: space-between;
     margin-top:get-vw(8px);
+    img{
+      width:100%;
+      height:auto;
+    }
     span, em{
       display:inline-block;
       font-size:get-vw(14px);
