--- a/css/ui.scss
+++ b/css/ui.scss
@@ -739,8 +739,9 @@
     .bbs-view-content{
       padding:60px 0 60px;
       font-size:18px;
-      & img{
-        text-align: center;
+      img{
+        width:auto;
+        height:auto;
       }
     }
   }
