--- a/css/ui.scss
+++ b/css/ui.scss
@@ -907,7 +907,7 @@
 .tab{
   display:flex;
   justify-content: center;
-  margin:0 get-vw(-16px);
+  margin:get-vw(12px) get-vw(-16px) get-vw(22px);
   li{
     margin:0 get-vw(8px);
     a{
