--- a/css/ui.scss
+++ b/css/ui.scss
@@ -972,6 +972,7 @@
     th, td{
       padding:get-vw(15px) get-vw(16px);
       border-bottom:1px solid #E8E8E8;
+      font-size:get-vw(14px);
       color:#0D0D0D;
       &.txtc-skyblue {
         color:#08A2DC;
