--- a/css/ui.scss
+++ b/css/ui.scss
@@ -870,6 +870,7 @@
       &:hover{
         padding:15px;
         a{
+          height:278px;
           border:2px solid #08A2DC;
           .btn-download{
             color:#08A2DC;
