--- a/css/main.scss
+++ b/css/main.scss
@@ -317,6 +317,7 @@ header {
               a {
                 position: relative;
                 display: flex;
+                color: #00498C;
                 &:after {
                   content: '';
                   position: absolute;
