--- a/css/main.scss
+++ b/css/main.scss
@@ -1766,6 +1766,7 @@ footer {
             }
             > ul {
               > li {
+                margin-top: 10px;
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 26px;
