--- a/css/main.scss
+++ b/css/main.scss
@@ -1766,7 +1766,6 @@ footer {
             }
             > ul {
               > li {
-                margin-top: 10px;
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 26px;
@@ -1782,6 +1781,9 @@ footer {
                   font-size: 16px;
                   line-height: 26px;
                   color: #777;
+                  &:last-child {
+                    margin-bottom: 10px;
+                  }
                 }
                 > ul {
                   > li {
