--- a/css/main.scss
+++ b/css/main.scss
@@ -273,7 +273,7 @@ header {
           ul {
             li {
               a {
-                //color: #fff;
+                //color: #fff;ㅏ
               }
             }
           }
