--- a/css/style.css
+++ b/css/style.css
@@ -2615,6 +2615,7 @@ caption {
     height: 294px;
     padding: 32px 0 36px 30px;
     text-align: left;
+    vertical-align: top;
   }
   .bod-composition .bod-list li + li {
     margin: 4px;
@@ -2668,6 +2669,17 @@ caption {
     border: none;
     background: #00498C;
     color: #FFFFFF;
+  }
+}
+@media all and (min-width: 961px) and (max-width: 1320px) {
+  .bod-composition .bod-list {
+    width: 100%;
+  }
+  .bod-composition .bod-list li {
+    width: 23%;
+  }
+  .bod-composition .bod-list li .name span {
+    word-break: keep-all;
   }
 }
 /* 연혁 */
@@ -3030,6 +3042,7 @@ caption {
   }
   .history-cont .history-wrap .year-wrap .desc .img {
     width: 100%;
+    max-width: 535px;
     font-size: 0;
   }
   .history-cont .history-wrap .year-wrap .desc .img img {
