--- a/css/ui.scss
+++ b/css/ui.scss
@@ -2896,6 +2896,7 @@
           }
           .img{
             width:100%;
+            max-width: 535px;
             font-size:0;
             img{
               width:100%;
