--- a/css/ui.scss
+++ b/css/ui.scss
@@ -2544,6 +2544,7 @@
       width: 100%;
       z-index: 8;
       background-color: #fff;
+      border-top:1px solid #F3F4F6;
     }
   }
   .history-tab{
@@ -2568,16 +2569,7 @@
       width:100%;
       height:get-vw(60px);
       padding:0 get-vw(50px) 0 get-vw(33px);
-      &::before{
-        content: '';
-        display:block;
-        position: absolute;
-        bottom: 0;
-        left:0;
-        right:0;
-        height:4px;
-        background:linear-gradient(180deg, rgba(0, 0, 0, 0.07) 0%, rgba(0, 0, 0, 0) 100%);
-      }
+      box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
       li{
         position: relative;
         padding:get-vw(18px) get-vw(8px) get-vw(16px);
