--- a/css/main.scss
+++ b/css/main.scss
@@ -248,7 +248,8 @@ header {
   header {
     height: 92px;
     padding: 0 60px;
-    background-color: transparent;
+    //background-color: transparent;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.12);
     &.main {
       background-color: transparent;
       .head {
@@ -267,13 +268,14 @@ header {
       }
     }
     &.top, &.up {
+      box-shadow: none;
       .head {
         .quick-menu {
           display: block;
           ul {
             li {
               a {
-                //color: #fff;ㅏ
+                //color: #fff;
               }
             }
           }
@@ -281,6 +283,7 @@ header {
       }
     }
     &.main-top, &.main-up {
+      box-shadow: none;
       .head {
         .quick-menu {
           display: block;
