--- a/css/style.css
+++ b/css/style.css
@@ -3255,7 +3255,7 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   header {
     height: 92px;
     padding: 0 60px;
-    background-color: transparent;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.12);
   }
   header.main {
     background-color: transparent;
@@ -3266,8 +3266,14 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   header.main .head h1 a img:nth-child(2) {
     display: none;
   }
+  header.top, header.up {
+    box-shadow: none;
+  }
   header.top .head .quick-menu, header.up .head .quick-menu {
     display: block;
+  }
+  header.main-top, header.main-up {
+    box-shadow: none;
   }
   header.main-top .head .quick-menu, header.main-up .head .quick-menu {
     display: block;
